--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-body{
-    background: url(../images/stena.png) no-repeat center/cover;
+main{
+    font-family: "Oswald";
+    font-size: 20px;
+    font-style: normal;
 }
 .display-flex{
     display: flex;
@@ -20,3 +22,83 @@ body{
     overflow-y: scroll;
     max-height: 555px;
 }
+.work::-webkit-scrollbar {
+    width: 15px; /* ширина для вертикального скролла */
+    height: 8px; /* высота для горизонтального скролла */
+    background-color: #9a9a9a;
+}
+
+/* ползунок скроллбара */
+.work::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+.menu-viboru,
+.chek,
+.robota{
+    justify-content: center;
+    text-align: center;
+}
+input[type=range].progres-bar {
+    height: 10px;
+    -webkit-appearance: none;
+  }
+  
+  input[type=range].progres-bar:focus {
+    outline: none;
+  }
+  
+  /*webkit*/
+  input[type=range].progres-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 1em;
+    background: #000000;
+    border: none;
+    box-shadow: 0 0 2px black;
+    margin-top: calc(max((1em - 1px - 1px) * 0.5,0px) - 15px * 0.5);
+  }
+  
+  input[type=range].progres-bar::-webkit-slider-runnable-track {
+    height: 1em;
+    border: 1px solid #b2b2b2;
+    border-radius: 0.5em;
+    background: #efefef;
+    box-shadow: none;
+  }
+  
+  input[type=range].progres-bar::-webkit-slider-thumb:hover {
+    background: #000000;
+  }
+  
+  input[type=range].progres-bar:hover::-webkit-slider-runnable-track {
+    background: #e5e5e5;
+    border-color: #9a9a9a;
+  }
+  
+  input[type=range].progres-bar::-webkit-slider-thumb:active {
+    background: #000000;
+  }
+  
+  input[type=range].progres-bar:active::-webkit-slider-runnable-track {
+    background: #f5f5f5;
+    border-color: #c1c1c1;
+  }
+  .pitaxaya{
+    color: #a00b6a;
+  }
+  .submit{
+    font-family: "Oswald";
+    background-color: #000000;
+    padding: 10px 70px;
+    border-radius: 50px;
+    color: #f5f5f5;
+    cursor: pointer;
+    transition: all ease 1s;
+  }
+  .submit:hover{
+    background-color: #9a9a9a;
+  }
+  .submit-margin{
+    margin-top: 15px;
+  }
